--- a/gts-ui/pom.xml
+++ b/gts-ui/pom.xml
@@ -13,11 +13,24 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.dynamoframework</groupId>
-			<artifactId>dynamo-spring</artifactId>
+			<artifactId>dynamo-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.dynamoframework</groupId>
 			<artifactId>dynamo-functional-domain</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.dynamoframework</groupId>
+			<artifactId>dynamo-impl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.dynamoframework</groupId>
+			<artifactId>dynamo-impl</artifactId>
+			<type>test-jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.dynamoframework</groupId>
+			<artifactId>dynamo-test</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.ocs</groupId>
