--- a/pom.xml
+++ b/pom.xml
@@ -15,23 +15,23 @@
 	<properties>
 		<sonar.language>java</sonar.language>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<vaadin.version>7.7.3</vaadin.version>
+		<vaadin.version>7.7.7</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<hibernate.version>4.3.1.Final</hibernate.version>
-		<spring.version>4.3.6.RELEASE</spring.version>
-		<querydsl.version>3.6.3</querydsl.version>
-		<aspectj.version>1.6.12</aspectj.version>
-		<com.ocs.dynamo.version>1.1-TRAINING</com.ocs.dynamo.version>
+		<hibernate.version>4.3.2.Final</hibernate.version>
+		<spring.version>4.3.7.RELEASE</spring.version>
+		<querydsl.version>3.7.4</querydsl.version>
+		<aspectj.version>1.8.11</aspectj.version>
+		<com.ocs.dynamo.version>1.3-CB3-SNAPSHOT</com.ocs.dynamo.version>
 		<deltaspike.version>1.2.1</deltaspike.version>
 		<junit.version>4.12</junit.version>
-		<jackson.version>1.9.13</jackson.version>
-		<vaadin-spring.version>1.0.0.beta3</vaadin-spring.version>
+		<jackson.version>2.8.5</jackson.version>
+		<vaadin-spring.version>1.2.0</vaadin-spring.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
-		<javax.servlet.version>3.0.1</javax.servlet.version>
-		<vaadin.lazycontainer.version>7.4.0.1</vaadin.lazycontainer.version>
+		<javax.servlet.version>3.1.0</javax.servlet.version>
+		<vaadin.lazycontainer.version>7.6.1.3</vaadin.lazycontainer.version>
 		<mockito.version>1.10.19</mockito.version>
 		<cdi.version>1.2</cdi.version>
 		<confirmdialog.version>2.1.3</confirmdialog.version>
@@ -61,7 +61,27 @@
 		<dependencies>
 			<dependency>
 				<groupId>org.dynamoframework</groupId>
-				<artifactId>dynamo-spring</artifactId>
+				<artifactId>dynamo-api</artifactId>
+				<version>${com.ocs.dynamo.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.dynamoframework</groupId>
+				<artifactId>dynamo-envers</artifactId>
+				<version>${com.ocs.dynamo.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.dynamoframework</groupId>
+				<artifactId>dynamo-impl</artifactId>
+				<version>${com.ocs.dynamo.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.dynamoframework</groupId>
+				<artifactId>dynamo-functional-domain</artifactId>
+				<version>${com.ocs.dynamo.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.dynamoframework</groupId>
+				<artifactId>dynamo-frontend</artifactId>
 				<version>${com.ocs.dynamo.version}</version>
 			</dependency>
 			<dependency>
@@ -72,8 +92,10 @@
 			</dependency>
 			<dependency>
 				<groupId>org.dynamoframework</groupId>
-				<artifactId>dynamo-functional-domain</artifactId>
+				<artifactId>dynamo-impl</artifactId>
 				<version>${com.ocs.dynamo.version}</version>
+				<type>test-jar</type>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.vaadin</groupId>
@@ -302,13 +324,18 @@
 				<version>${jaxen.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-core-asl</artifactId>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
 				<version>${jackson.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-mapper-asl</artifactId>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId> com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
 				<version>${jackson.version}</version>
 			</dependency>
 			<dependency>
